# python-project-template

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  README_FINAL.md  index.html  mkdocs.yml  nokeys.env  objects.inv  pyproject.toml  render.yaml  ruff.toml  sitemap.xml
.github/: copilot-instructions.md
.github/agents/: dev-implementation-agent.md  dev-prototype-agent.md  docs-agent.md  draft-to-plan.agent.md
.github/prompts/: plan-staticFolRelocation.prompt.md
.github/workflows/: docs.yml
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md  uv.md
docs/guides/: params_config.md  webapp_setup.md
final_resources/: README.md  pyproject.toml
getting-started/: index.html
guides/pre_commit/: index.html
guides/uv/: index.html
meta/: README.md  rename_project.py
reference/project_name/: index.html
reference/project_name/config/: index.html
reference/project_name/config/sample_config/: index.html
reference/project_name/data_models/: index.html
reference/project_name/metaclasses/: index.html
reference/project_name/params/: index.html
scratch_space/: plan.md
scratch_space/00_vibes/: 01-post-rename-cleanup.md  03-params-config.md
scratch_space/01_feature_sample/: 01_sample.ipynb
scratch_space/mkdocs_integration/: README.md
scratch_space/project_name_sample/: 01_config.ipynb  01_params.ipynb  sample01.ipynb
scratch_space/vibes/: 01-remove-shims.md  02-small-changes.md
scratch_space/webapp_scaffold/: 01_csp_hardening.md  02_ui_base.md  03_static_fol.md  README.md
scripts/webapp/: cdn_load.sh
search/: search_index.json
src/project_name/: __init__.py
src/project_name/config/: __init__.py  project_name_config.py  project_name_paths.py  sample_config.py
src/project_name/config/webapp/: __init__.py  (+1 more)
src/project_name/data_models/: __init__.py
src/project_name/params/: load_env.py  project_name_params.py  project_name_paths.py  sample_params.py
src/project_name/webapp/: __init__.py  app.py  main.py
static/css/: app.css
templates/: base.html
tests/: __init__.py  conftest.py
tests/config/: test_env_vars.py  test_project_name_paths.py  test_sample_config.py
tests/config/webapp/: __init__.py  test_webapp_params.py
tests/data_models/: test_basemodel_kwargs.py
tests/metaclasses/: test_singleton.py
tests/params/: test_project_name_params.py  test_project_name_paths.py  test_sample_params.py
tests/webapp/: conftest.py  test_auth.py  test_pages.py  test_security.py
(+26 files in other folders)
