[project]
name = "project-name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma-haystack>=2.0.1",
    "haystack-ai>=2.10.0",
    "loguru>=0.7.3",
    "ollama-haystack>=2.3.0",
    "openai>=1.63.0",
    "rich>=13.9.4",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "ruff>=0.9.6",
    "pyright[nodejs]>=1.1.407",
    "pre-commit>=4.1.0",
    "detect-secrets>=1.5.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]
